test fix images

--- a/modules/en/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/roll-back-docker-installed-rancher.adoc
+++ b/modules/en/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/roll-back-docker-installed-rancher.adoc
@@ -19,7 +19,7 @@ In this command, `<PRIOR_RANCHER_VERSION>` is the version of Rancher you were ru
 
 Cross reference the image and reference table below to learn how to obtain this placeholder data. Write down or copy this information before starting the procedure below.
 
-^Terminal `docker ps` Command, Displaying Where to Find `<PRIOR_RANCHER_VERSION>` and `<RANCHER_CONTAINER_NAME>`^image:/img/placeholder-ref-2.png[Placeholder Reference]
+^Terminal `docker ps` Command, Displaying Where to Find `<PRIOR_RANCHER_VERSION>` and `<RANCHER_CONTAINER_NAME>`^image::placeholder-ref-2.png[Placeholder Reference]
 
 | Placeholder                | Example                    | Description                                             |
 | ------------------ | ------------------ | ------------------------------------- |
