--- a/modules/en/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/upgrade-docker-installed-rancher.adoc
+++ b/modules/en/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/upgrade-docker-installed-rancher.adoc
@@ -33,7 +33,7 @@ Write down or copy this information before starting the upgrade.
 
 ^Terminal `docker ps` Command, Displaying Where to Find `<RANCHER_CONTAINER_TAG>` and `<RANCHER_CONTAINER_NAME>`^
 
-image::/img/placeholder-ref.png[Placeholder Reference]
+image::placeholder-ref.png[Placeholder Reference]
 
 | Placeholder                | Example                    | Description                                               |
 | ------------------ | ------------------ | -------------------------------------- |
