fix image errors - target not found

--- a/modules/en/pages/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/restore-docker-installed-rancher.adoc
+++ b/modules/en/pages/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/restore-docker-installed-rancher.adoc
@@ -18,7 +18,7 @@ Cross reference the image and reference table below to learn how to obtain this 
 
 ^Terminal `docker ps` Command, Displaying Where to Find `<RANCHER_CONTAINER_TAG>` and `<RANCHER_CONTAINER_NAME>`^
 
-image::/img/placeholder-ref.png[Placeholder Reference]
+image:::placeholder-ref.png[Placeholder Reference]
 
 | Placeholder                | Example                    | Description                                               |
 | ------------------ | ------------------ | -------------------------------------- |
