reorg files and nav part 1: updating nav 1-39

--- a/modules/en/nav.adoc
+++ b/modules/en/nav.adoc
@@ -3,6 +3,9 @@
 ** xref:getting-started/quick-start-guides/deploy-rancher-manager/prime.adoc[]
 ** xref:getting-started/overview.adoc[]
 ** xref:reference-guides/rancher-manager-architecture/rancher-manager-architecture.adoc[]
+** xref:reference-guides/rancher-manager-architecture/architecture-recommendations.adoc[]
+** xref:reference-guides/rancher-manager-architecture/communicating-with-downstream-user-clusters[]
+** xref:reference-guides/rancher-manager-architecture/rancher-server-and-components[]
 ** xref:reference-guides/kubernetes-concepts.adoc[]
 ** xref:glossary.adoc[]
 * Prime Installation and Upgrades
@@ -11,11 +14,29 @@
 ** xref:reference-guides/cluster-configuration/rancher-server-configuration/rancher-server-configuration.adoc[]
 ** xref:getting-started/installation-and-upgrade/installation-references/installation-references.adoc[]
 ** xref:getting-started/installation-and-upgrade/other-installation-methods/other-installation-methods.adoc[]
+*** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/air-gapped-helm-cli-install.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/docker-install-commands.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/infrastructure-private-registry.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-kubernetes.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-rancher-ha.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/publish-images.adoc[]
+*** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/rancher-behind-an-http-proxy.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/set-up-infrastructure.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-kubernetes.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher.adoc[]
+*** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/rancher-on-a-single-node-with-docker.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/upgrade-docker-installed-rancher.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/roll-back-docker-installed-rancher.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[]
+** xref:getting-started/installation-and-upgrade/resources/resources.adoc[]
+** xref:how-to-guides/advanced-user-guides/tune-etcd-for-large-installs.adoc[]
+** xref:getting-started/installation-and-upgrade/upgrade-and-roll-back-kubernetes.adoc[]
 ** xref:getting-started/installation-and-upgrade/resources/resources.adoc[]
 ** xref:how-to-guides/advanced-user-guides/tune-etcd-for-large-installs.adoc[]
 ** xref:getting-started/installation-and-upgrade/upgrade-and-roll-back-kubernetes.adoc[]
 ** xref:getting-started/installation-and-upgrade/upgrade-kubernetes-without-upgrading-rancher.adoc[]
 ** xref:integrations-in-rancher/cloud-marketplace/cloud-marketplace.adoc[]
+*** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/adapter-requirements.adoc[]
 * Rancher Administration
 ** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/authentication-permissions-and-global-configuration.adoc[]
 ** xref:how-to-guides/new-user-guides/kubernetes-cluster-setup/kubernetes-cluster-setup.adoc[]
