installation and upgrade section -- rest of files will prob. go under admin

--- a/modules/en/nav.adoc
+++ b/modules/en/nav.adoc
@@ -10,15 +10,17 @@
 ** xref:glossary.adoc[]
 * Prime Installation and Upgrades
 ** xref:getting-started/installation-and-upgrade/installation-requirements/installation-requirements.adoc[]
+*** xref:getting-started/installation-and-upgrade/installation-requirements/port-requirements.adoc[]
+*** xref:getting-started/installation-and-upgrade/installation-requirements/install-docker.adoc[]
+*** xref:getting-started/installation-and-upgrade/installation-requirements/dockershim.adoc[]
 ** xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/install-upgrade-on-a-kubernetes-cluster.adoc[]
-** xref:reference-guides/cluster-configuration/rancher-server-configuration/rancher-server-configuration.adoc[]
 ** xref:getting-started/installation-and-upgrade/installation-references/installation-references.adoc[]
 ** xref:getting-started/installation-and-upgrade/other-installation-methods/other-installation-methods.adoc[]
 *** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/air-gapped-helm-cli-install.adoc[]
 **** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/docker-install-commands.adoc[]
 **** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/infrastructure-private-registry.adoc[]
-**** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-kubernetes.adoc[]
 **** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-rancher-ha.adoc[]
+**** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-kubernetes.adoc[]
 **** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/publish-images.adoc[]
 *** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/rancher-behind-an-http-proxy.adoc[]
 **** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/set-up-infrastructure.adoc[]
@@ -27,16 +29,24 @@
 *** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/rancher-on-a-single-node-with-docker.adoc[]
 **** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/upgrade-docker-installed-rancher.adoc[]
 **** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/roll-back-docker-installed-rancher.adoc[]
-**** xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[]
 ** xref:getting-started/installation-and-upgrade/resources/resources.adoc[]
-** xref:how-to-guides/advanced-user-guides/tune-etcd-for-large-installs.adoc[]
-** xref:getting-started/installation-and-upgrade/upgrade-and-roll-back-kubernetes.adoc[]
-** xref:getting-started/installation-and-upgrade/resources/resources.adoc[]
+*** xref:getting-started/installation-and-upgrade/resources/bootstrap-password.adoc[]
+*** xref:getting-started/installation-and-upgrade/resources/choose-a-rancher-version.adoc[]
+*** xref:getting-started/installation-and-upgrade/resources/custom-ca-root-certificates.adoc[]
+*** xref:getting-started/installation-and-upgrade/resources/helm-version-requirements.adoc[]
+*** xref:getting-started/installation-and-upgrade/resources/local-system-charts.adoc[]
+*** xref:getting-started/installation-and-upgrade/resources/update-rancher-certificate.adoc[]
+*** xref:getting-started/installation-and-upgrade/resources/upgrade-cert-manager.adoc[]
 ** xref:how-to-guides/advanced-user-guides/tune-etcd-for-large-installs.adoc[]
 ** xref:getting-started/installation-and-upgrade/upgrade-and-roll-back-kubernetes.adoc[]
 ** xref:getting-started/installation-and-upgrade/upgrade-kubernetes-without-upgrading-rancher.adoc[]
 ** xref:integrations-in-rancher/cloud-marketplace/cloud-marketplace.adoc[]
+*** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/aws-cloud-marketplace.adoc[]
 *** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/adapter-requirements.adoc[]
+*** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/install-adapter[]
+*** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/uninstall-adapter.adoc[]
+*** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/common-issues[]
+*** xref:integrations-in-rancher/cloud-marketplace/supportconfig.adoc[]
 * Rancher Administration
 ** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/authentication-permissions-and-global-configuration.adoc[]
 ** xref:how-to-guides/new-user-guides/kubernetes-cluster-setup/kubernetes-cluster-setup.adoc[]
@@ -122,6 +132,7 @@
 ** Secrets & Encryption
 *** xref:how-to-guides/new-user-guides/kubernetes-resources-setup/secrets.adoc[]
 *** xref:getting-started/installation-and-upgrade/resources/add-tls-secrets.adoc[]
+*** xref:getting-started/installation-and-upgrade/installation-references/tls-settings[]
 *** xref:how-to-guides/new-user-guides/kubernetes-resources-setup/encrypt-http-communication.adoc[]
 *** xref:how-to-guides/new-user-guides/manage-clusters/rotate-encryption-key.adoc[]
 * xref:integrations-in-rancher/integrations-in-rancher.adoc[]
