typos and scattered category pages

--- a/modules/en/nav.adoc
+++ b/modules/en/nav.adoc
@@ -15,6 +15,9 @@
 *** xref:getting-started/installation-and-upgrade/installation-requirements/dockershim.adoc[]
 ** xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/install-upgrade-on-a-kubernetes-cluster.adoc[]
 ** xref:getting-started/installation-and-upgrade/installation-references/installation-references.adoc[]
+*** xref:installation-and-upgrade/installation-references/feature-flags	getting-started/installation-and-upgrade/installation-references/helm-shart-options.adoc[]
+*** xref:installation-and-upgrade/installation-references/feature-flags	getting-started/installation-and-upgrade/installation-references/tls-settings.adoc[]
+*** xref:installation-and-upgrade/installation-references/feature-flags	getting-started/installation-and-upgrade/installation-references/feature-flags.adoc[]
 ** xref:getting-started/installation-and-upgrade/other-installation-methods/other-installation-methods.adoc[]
 *** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/air-gapped-helm-cli-install.adoc[]
 **** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/docker-install-commands.adoc[]
@@ -43,9 +46,9 @@
 ** xref:integrations-in-rancher/cloud-marketplace/cloud-marketplace.adoc[]
 *** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/aws-cloud-marketplace.adoc[]
 *** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/adapter-requirements.adoc[]
-*** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/install-adapter[]
+*** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/install-adapter.adoc[]
 *** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/uninstall-adapter.adoc[]
-*** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/common-issues[]
+*** xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/common-issues.adoc[]
 *** xref:integrations-in-rancher/cloud-marketplace/supportconfig.adoc[]
 * Rancher Administration
 ** xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/authentication-permissions-and-global-configuration.adoc[]
@@ -132,7 +135,6 @@
 ** Secrets & Encryption
 *** xref:how-to-guides/new-user-guides/kubernetes-resources-setup/secrets.adoc[]
 *** xref:getting-started/installation-and-upgrade/resources/add-tls-secrets.adoc[]
-*** xref:getting-started/installation-and-upgrade/installation-references/tls-settings[]
 *** xref:how-to-guides/new-user-guides/kubernetes-resources-setup/encrypt-http-communication.adoc[]
 *** xref:how-to-guides/new-user-guides/manage-clusters/rotate-encryption-key.adoc[]
 * xref:integrations-in-rancher/integrations-in-rancher.adoc[]
