--- a/modules/en/nav.adoc
+++ b/modules/en/nav.adoc
@@ -15,9 +15,9 @@
 *** xref:getting-started/installation-and-upgrade/installation-requirements/dockershim.adoc[]
 ** xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/install-upgrade-on-a-kubernetes-cluster.adoc[]
 ** xref:getting-started/installation-and-upgrade/installation-references/installation-references.adoc[]
-*** xref:installation-and-upgrade/installation-references/feature-flags	getting-started/installation-and-upgrade/installation-references/helm-shart-options.adoc[]
-*** xref:installation-and-upgrade/installation-references/feature-flags	getting-started/installation-and-upgrade/installation-references/tls-settings.adoc[]
-*** xref:installation-and-upgrade/installation-references/feature-flags	getting-started/installation-and-upgrade/installation-references/feature-flags.adoc[]
+*** xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[]
+*** xref:getting-started/installation-and-upgrade/installation-references/tls-settings.adoc[]
+*** xref:getting-started/installation-and-upgrade/installation-references/feature-flags.adoc[]
 ** xref:getting-started/installation-and-upgrade/other-installation-methods/other-installation-methods.adoc[]
 *** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/air-gapped-helm-cli-install.adoc[]
 **** xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/docker-install-commands.adoc[]
